--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,5 +1,4 @@
-﻿@inherits NavMenuBase
-<div class="top-row pl-4 navbar navbar-dark">
+﻿<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">@ExecModeName</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -32,12 +31,18 @@
 </div>
 
 @code {
-    bool collapseNavMenu = true;
+    private bool collapseNavMenu = true;
 
-    string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
-    void ToggleNavMenu()
+    private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+#if SERVER_MODE
+        private string ExecModeName => "Server";
+#else
+    private string ExecModeName => "Client";
+#endif
 }
