--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -14,8 +14,7 @@
 </head>
 <body>
     <app>
-        @* Remove the following line of code to disable prerendering *@
-        @(await Html.RenderStaticComponentAsync<App>())
+        @(await Html.RenderComponentAsync<App>(RenderMode.ServerPrerendered))
     </app>
 
     <script src="_framework/blazor.server.js"></script>
